--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script defer src="./closure.js"></script>
+    <script defer src="./promise-part2.js"></script>
 </head>
 <body>
     <!-- // для запуска отдельного script файла достаточно прописать в терминале node /*имя файла.расширение*/ -->
